--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerador de Link WhatsApp</title>
+    <title>ZapBuilder — link personalizado para WhatsApp em segundos!</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="./assets/favicon_io/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -18,8 +19,9 @@
         <header class="cabecalho-app">
             <div class="logo">
                 <i class="fab fa-whatsapp"></i>
-                <h1>Gerador de Link WhatsApp</h1>
+                <h1 style="color: #00a651">ZAP<span style="color: #0a3c3c;">BUILDER</span></h1>
             </div>
+            
             <p class="slogan">Crie mensagens personalizadas para WhatsApp para seus eventos em segundos</p>
         </header>
 
@@ -219,7 +221,7 @@
         </main>
 
         <footer class="rodape-app">
-            <p>&copy; 2025 Gerador de Link WhatsApp | Desenvolvido por <a href="https://www.linkedin.com/in/samuellmascarenhas/">Samuel Mascarenhas</a></p>
+            <p>&copy; 2025 ZapBuilder - Todos direitos reservados | Projetado e Desenvolvido por <a href="https://www.linkedin.com/in/samuellmascarenhas/">Samuel Mascarenhas</a></p>
         </footer>
     </div>
 
