--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </main>
 
         <footer class="rodape-app">
-            <p>&copy; 2025 ZapBuilder - Todos direitos reservados | Projetado e Desenvolvido por <a href="https://www.linkedin.com/in/samuellmascarenhas/">Samuel Mascarenhas</a></p>
+            <p>&copy; 2025 ZapBuilder - Todos direitos reservados | Desenvolvido por <a href="https://www.linkedin.com/in/samuellmascarenhas/">Samuel Mascarenhas</a></p>
         </footer>
     </div>
 
